--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@mdx-js/react": "^3.0.1",
     "gatsby": "^5.13.5",
     "gatsby-plugin-image": "^3.13.1",
@@ -28,6 +29,7 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
